feat(genCode): 按模块生成代码调整
